# saaransh

./: .gitignore  README.md  muvera_sweep.csv  pyproject.toml
sample_docs/: queries.jsonl
scripts/: probe_gemma.py
src/saaransh/: __init__.py  cache.py  cli.py  corpus.py  eval.py  index.py  runner.py  sweep.py
src/saaransh/embedders/: __init__.py  base.py  colqwen2_backbone.py  colqwen2_maxsim.py  colqwen2_muvera.py  gemma4_pooled.py
tests/: test_cache_sweep.py  test_faiss_backend.py  test_gemma_contract.py  test_maxsim_and_pdf.py  test_model_path_resolve.py  test_pipeline_synthetic.py
